Cache precursor-scoped metrics for better reporting performance (#1129)